[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://global/assets/fonts/Inter_Black.tres" type="DynamicFont" id=2]
[ext_resource path="res://global/assets/fonts/Inter_Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://global/assets/fonts/Inter_Compact.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/assets/load.png" type="Texture" id=5]
[ext_resource path="res://global/assets/fonts/Inter_Regular.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 523.0
margin_top = 65.0
margin_right = 843.0
margin_bottom = 702.0
rect_min_size = Vector2( 320, 0 )
custom_constants/separation = 48

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Dinosaur Game"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 320.0
margin_bottom = 170.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_right = NodePath("LoadButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Play"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer/PlayButton"]
margin_left = 343.749
margin_top = -3.19324
margin_right = 438.749
margin_bottom = 85.8068
focus_neighbour_left = NodePath("..")
custom_fonts/font = ExtResource( 4 )
action_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 320.0
margin_bottom = 301.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_right = NodePath("../PlayButton/LoadButton")
focus_neighbour_bottom = NodePath("../LicenseButton")
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Options"

[node name="LicenseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 320.0
margin_bottom = 432.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_right = NodePath("../PlayButton/LoadButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "License"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 320.0
margin_bottom = 563.0
focus_neighbour_top = NodePath("../LicenseButton")
focus_neighbour_right = NodePath("../PlayButton/LoadButton")
focus_neighbour_bottom = NodePath("../PlayButton")
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Quit"

[node name="Version" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 611.0
margin_right = 320.0
margin_bottom = 637.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.509804, 0.552941, 1 )
text = "Version 0.0.8-dev"
align = 1
valign = 1

[node name="LicenseDialog" type="AcceptDialog" parent="CenterContainer"]
editor/display_folded = true
margin_left = 83.0
margin_top = 84.0
margin_right = 1283.0
margin_bottom = 684.0
rect_min_size = Vector2( 1200, 600 )
popup_exclusive = true
window_title = "License"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/LicenseDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="LicenseLabel" type="Label" parent="CenterContainer/LicenseDialog/ScrollContainer"]
margin_right = 1087.0
margin_bottom = 3477.0
custom_fonts/font = ExtResource( 4 )
text = "-----------------------------------------------------------
Dinosaur Game - MIT License
-----------------------------------------------------------
Copyright (c) 2019 br-n518

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-----------------------------------------------------------
FONT LICENSES
-----------------------------------------------------------

Copyright (c) 2016-2018 The Inter Project Authors (me@rsms.me)

This Font Software is licensed under the SIL Open Font License, Version 1.1.
This license is copied below, and is also available with a FAQ at:
http://scripts.sil.org/OFL

-----------------------------------------------------------
SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
-----------------------------------------------------------

PREAMBLE
The goals of the Open Font License (OFL) are to stimulate worldwide
development of collaborative font projects, to support the font creation
efforts of academic and linguistic communities, and to provide a free and
open framework in which fonts may be shared and improved in partnership
with others.

The OFL allows the licensed fonts to be used, studied, modified and
redistributed freely as long as they are not sold by themselves. The
fonts, including any derivative works, can be bundled, embedded,
redistributed and/or sold with any software provided that any reserved
names are not used by derivative works. The fonts and derivatives,
however, cannot be released under any other type of license. The
requirement for fonts to remain under this license does not apply
to any document created using the fonts or their derivatives.

DEFINITIONS
\"Font Software\" refers to the set of files released by the Copyright
Holder(s) under this license and clearly marked as such. This may
include source files, build scripts and documentation.

\"Reserved Font Name\" refers to any names specified as such after the
copyright statement(s).

\"Original Version\" refers to the collection of Font Software components as
distributed by the Copyright Holder(s).

\"Modified Version\" refers to any derivative made by adding to, deleting,
or substituting -- in part or in whole -- any of the components of the
Original Version, by changing formats or by porting the Font Software to a
new environment.

\"Author\" refers to any designer, engineer, programmer, technical
writer or other person who contributed to the Font Software.

PERMISSION AND CONDITIONS
Permission is hereby granted, free of charge, to any person obtaining
a copy of the Font Software, to use, study, copy, merge, embed, modify,
redistribute, and sell modified and unmodified copies of the Font
Software, subject to the following conditions:

1) Neither the Font Software nor any of its individual components,
in Original or Modified Versions, may be sold by itself.

2) Original or Modified Versions of the Font Software may be bundled,
redistributed and/or sold with any software, provided that each copy
contains the above copyright notice and this license. These can be
included either as stand-alone text files, human-readable headers or
in the appropriate machine-readable metadata fields within text or
binary files as long as those fields can be easily viewed by the user.

3) No Modified Version of the Font Software may use the Reserved Font
Name(s) unless explicit written permission is granted by the corresponding
Copyright Holder. This restriction only applies to the primary font name as
presented to the users.

4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font
Software shall not be used to promote, endorse or advertise any
Modified Version, except to acknowledge the contribution(s) of the
Copyright Holder(s) and the Author(s) or with their explicit written
permission.

5) The Font Software, modified or unmodified, in part or in whole,
must be distributed entirely under this license, and must not be
distributed under any other license. The requirement for fonts to
remain under this license does not apply to any document created
using the Font Software.

TERMINATION
This license becomes null and void if any of the above conditions are
not met.

DISCLAIMER
THE FONT SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE
COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL
DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
OTHER DEALINGS IN THE FONT SOFTWARE.
"

[node name="OptionsDialog" type="AcceptDialog" parent="CenterContainer"]
editor/display_folded = true
margin_left = 283.0
margin_top = 84.0
margin_right = 1083.0
margin_bottom = 684.0
rect_min_size = Vector2( 800, 600 )
popup_exclusive = true
window_title = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/OptionsDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/separation = 16

[node name="ShadowButton" type="CheckButton" parent="CenterContainer/OptionsDialog/VBoxContainer"]
margin_right = 784.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "Enable Shadows"

[node name="InvertCameraButton" type="CheckButton" parent="CenterContainer/OptionsDialog/VBoxContainer"]
margin_top = 63.0
margin_right = 784.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 6 )
text = "Invert Camera Rotation"
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LicenseButton" to="." method="_on_LicenseButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="CenterContainer/OptionsDialog/VBoxContainer/ShadowButton" to="." method="_on_ShadowButton_toggled"]
[connection signal="toggled" from="CenterContainer/OptionsDialog/VBoxContainer/InvertCameraButton" to="." method="_on_InvertCameraButton_toggled"]
